[tool.poetry]
name = "mooddashboard"
version = "0.1.0"
description = ""
authors = ["Christopher Collins <qemtek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.9.3"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

